    - Fixed crash when playing the trains-stations tutorial
  Changes:
    - Removed references to normal / expensive recipes (945)
    - Added Ore Sorting Facility 5. Catalyst sorting requires a higher tier ore sorting facility (979)
    - Updated for Factorio 2.0 (994)
    - Made heavy offshore pump ignore mining productivity research (1045)
---------------------------------------------------------------------------------------------------
Version: 0.12.7
Date: 21.02.2024
  Changes:
    - Changed library function to handle bad input data (968)
  Bugfixes:
    - Added dependencies on more of Bob's mods to fix issue where Bob's techs were not being correctly replaced (975)
---------------------------------------------------------------------------------------------------
Version: 0.12.6
Date: 04.01.2024
  Bugfixes:
    - Fixed compatibility issue with AAI Industry and Bob's Assembling Machines (960)
    - Fixed compatibility issue with Transport Drones mod (961)
---------------------------------------------------------------------------------------------------
Version: 0.12.5
Date: 22.12.2023
  Changes:
    - Moved Electro-refining to purple science. Replaced Crystal catalyst with Hybrid catalyst in Thorium sorting recipe (909)
    - Compatibility with Bob's changes (911)
    - Enabled productivity modules for Thorium Ore sorting recipe (929)
    - Added custom error message for when trying to insert invalid items into a barreling pump (933)
    - Changed Crystal catalyst recipe to require Crystallizer 2 (943)
    - Removed Crystal catalyst from Bob's gem ore crystallization recipes (943)
    - Changed the Recipe Builder to make it easier for other mods to add their own materials (950)
    - Added a beaconable electric offshore waterpump (952)
---------------------------------------------------------------------------------------------------
Version: 0.12.4
Date: 23.02.2023
  Bugfixes:
    - Fixed Fluoric waste water purification recipe icon (897)