@@ -180,11 +180,11 @@ data:extend({
     energy_required = 2,
     ingredients = {
       { type = "item", name = "angels-crystal-dust", amount = 10 },
-      { type = "item", name = "angels-milling-drum", amount = 1, ignored_by_stats = 1 },
+      { type = "item", name = "angels-milling-drum-lubricated", amount = 1 },
     },
     results = {
       { type = "item", name = "angels-crystal-powder", amount = 20 },
-      { type = "item", name = "angels-milling-drum-used", amount = 1, ignored_by_productivity = 1 },
+      { type = "item", name = "angels-milling-drum", amount = 1, ignored_by_stats = 1, ignored_by_productivity = 1 },
     },
     icons = {
       {
