@@ -139,7 +139,7 @@ angels-catalysator-green=Crystal catalyst
 angels-catalysator-orange=Hybrid catalyst
 
 angels-milling-drum=Milling drum
-angels-milling-drum-used=Used milling drum
+angels-milling-drum-lubricated=Lubricated milling drum
 
 angels-crystal-dust=Crystal dust
 angels-geode-blue=Blue geode
