@@ -111,8 +111,8 @@
     ["liquifier-2", "angels-liquifier-2"],
     ["liquifier-3", "angels-liquifier-3"],
     ["liquifier-4", "angels-liquifier-4"],
-    ["milling-drum", "angels-milling-drum"],
-    ["milling-drum-used", "angels-milling-drum-used"],
+    ["milling-drum", "angels-milling-drum-lubricated"],
+    ["milling-drum-used", "angels-milling-drum"],
     ["mineral-sludge-barrel", "angels-mineral-sludge-barrel"],
     ["ore-crusher", "angels-ore-crusher"],
     ["ore-crusher-2", "angels-ore-crusher-2"],
@@ -381,7 +381,7 @@
     ["liquifier-3", "angels-liquifier-3"],
     ["liquifier-4", "angels-liquifier-4"],
     ["milling-drum", "angels-milling-drum"],
-    ["milling-drum-used", "angels-milling-drum-used"],
+    ["milling-drum-used", "angels-milling-drum-lubricated"],
     ["ore-crusher", "angels-ore-crusher"],
     ["ore-crusher-2", "angels-ore-crusher-2"],
     ["ore-crusher-3", "angels-ore-crusher-3"],
