@@ -592,13 +592,13 @@ else
       "angels-ore-powderizer-2",
       "angels-ore-powderizer-3",
       "angels-milling-drum",
-      "angels-milling-drum-used",
+      "angels-milling-drum-lubricated",
     })
     angelsmods.functions.hide("angels-ore-powderizer")
     angelsmods.functions.hide("angels-ore-powderizer-2")
     angelsmods.functions.hide("angels-ore-powderizer-3")
     angelsmods.functions.hide("angels-milling-drum")
-    angelsmods.functions.hide("angels-milling-drum-used")
+    angelsmods.functions.hide("angels-milling-drum-lubricated")
     OV.remove_unlock("angels-advanced-ore-refining-3", "angels-ore-powderizer-3")
   end
 end
