@@ -12,6 +12,7 @@ Date: ???
     - Added Ore Sorting Facility 5. Catalyst sorting requires a higher tier ore sorting facility (979)
     - Updated for Factorio 2.0 (994)
     - Made heavy offshore pump ignore mining productivity research (1045)
+    - Reworked milling drum recipes so that milling drums can be hand crafted (1105)
 ---------------------------------------------------------------------------------------------------
 Version: 0.12.7
 Date: 21.02.2024
